# rust-stack-training

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: .env  Cargo.toml
api/.github/workflows/: ci.yml
api/src/: config.rs  main.rs  state.rs
api/src/database/: mod.rs
api/src/models/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250428_000001_create_user_table.rs
src/: main.rs
