[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.3"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] } # Add clap with the "derive" feature
serde_json = "1.0.140"
deepseek-api = "0.1.0-alpha.3"
axum-login = "0.17.0"
serde = { version = "1", features = ["derive"] }
tower-cookies = "0.5" # if you use cookies
uuid = { version = "1", features = ["v4"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-uuid",
    "with-chrono",
    "debug-print"
] }
tracing-subscriber = "0.3.19"
sqlx = "0.8.5"
dotenv = "0.15"
tracing = "0.1.41"
chrono = "0.4.40"
config = "0.15.8"
